simple starter/excel update/leetcode update/validate update/design pattern